1.x.x
----------------
CHANGES:
- Removed the empty value from bug fields, when there are list of values.
  (Alex Pagnoni)



1.1
----------------
NEW FEATURES:
- Added "task" tag. (Alex Pagnoni)

CHANGES:
- Changed innowork-core depency to version 3.3. (Alex Pagnoni)



1.0 - 2014/01/15
----------------
- First release.