@@ -5,13 +5,13 @@ bugs.title                   = Bugs
 bugs.toolbar                 = Open bugs
 donebugs.toolbar             = Archived bugs
 newbug.toolbar               = New bug
-customer.label                  = Customer
-nocustomer.label                = No customer
+project.label                  = Project
+noproject.label                = No project
 
 # main default
 
 bug.header                   = Bug
-customer.header                 = Customer
+project.header                 = Project
 title.header                    = Title
 priority.header                 = Priority
 status.header                   = Status
@@ -30,14 +30,12 @@ filter.label                    = Filter
 filter.button                   = Filter
 erase_filter.button             = Erase filter
 filter_date.label               = Date (dd/mm/yyyy)
-filter_customer.label           = Customer
 filter_project.label            = Project
 filter_priority.label           = Priority
 filter_status.label             = Status
 filter_source.label             = Source
 filter_resolution.label			= Resolution
 filter_type.label               = Severity
-allcustomers.label				= All
 allprojects.label				= All
 allstatuses.label				= All
 allpriorities.label				= All
