@@ -40,7 +40,7 @@ field_removed.status        = Field removed.
 field_not_removed.status    = ERROR: Field not removed.
 
 filter.button               = Filter
-filter_customer.label       = Customer
+filter_project.label        = Project
 filter_type.label           = Severity
 filter_status.label         = Status
 filter_priority.label       = Priority
