@@ -8,7 +8,6 @@ bug                      = Bug
 
 title                       = Title
 projectid                   = Project
-customerid                  = Customer
 statusid                    = Status
 priorityid                  = Priority
 sourceid                    = Source
