@@ -5,13 +5,13 @@ bugs.title                   = Bugs
 bugs.toolbar                 = Bug aperti
 donebugs.toolbar             = Bug archiviati
 newbug.toolbar               = Nuovo bug
-customer.label                  = Azienda
-nocustomer.label                = Nessuna azienda
+project.label                  = Progetto
+noproject.label                = Nessun progetto
 
 # main default
 
 bug.header                   = Bug
-customer.header                 = Azienda
+project.header                 = Progetto
 title.header                    = Titolo
 priority.header                 = Priorità
 status.header                   = Stato
@@ -30,14 +30,12 @@ filter.label                    = Filtro
 filter.button                   = Filtra
 erase_filter.button             = Azzera filtro
 filter_date.label               = Data (gg/mm/aaaa)
-filter_customer.label           = Azienda
 filter_project.label            = Progetto
 filter_priority.label           = Priorità
 filter_status.label             = Stato
 filter_source.label             = Provenienza
 filter_resolution.label			= Risoluzione
 filter_type.label               = Severità
-allcustomers.label				= Tutte
 allprojects.label				= Tutti
 allstatuses.label				= Tutti
 allpriorities.label				= Tutte
