@@ -40,7 +40,7 @@ field_removed.status        = Campo eliminato.
 field_not_removed.status    = ERRORE: Campo non eliminato.
 
 filter.button               = Filtra
-filter_customer.label       = Cliente
+filter_project.label        = Progetto
 filter_type.label           = Severità
 filter_status.label         = Stato
 filter_priority.label       = Priorità
