@@ -8,7 +8,6 @@ bug                      = Bug
 
 title                       = Titolo
 projectid                   = Progetto
-customerid                  = Azienda
 statusid                    = Stato
 priorityid                  = Priorità
 sourceid                    = Sorgente
