@@ -111,21 +111,6 @@ $this->toolbars['mail'] = array(
             $projects[$id] = $fields['name'];
         }
     
-        $innowork_customers = new InnoworkCompany(
-                \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getDataAccess(),
-                \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentDomain()->getDataAccess()
-        );
-        $search_results = $innowork_customers->Search(
-                '',
-                \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentUser()->getUserId()
-        );
-    
-        $customers_filter['0'] = $this->localeCatalog->getStr('allcustomers.label');
-        while (list($id, $fields) = each($search_results))
-        {
-            $customers_filter[$id] = $fields['companyname'];
-        }
-    
         $statuses = InnoworkBugField::getFields(InnoworkBugField::TYPE_STATUS);
         $statuses['0'] = $this->localeCatalog->getStr('allstatuses.label');
     
@@ -144,17 +129,6 @@ $this->toolbars['mail'] = array(
         // Filtering
     
         if (isset($eventData['filter'])) {
-            // Customer
-    
-            $customer_filter_sk = new WuiSessionKey(
-                    'customer_filter',
-                    array(
-                            'value' => $eventData['filter_customerid']
-                    )
-            );
-    
-            if ($eventData['filter_customerid'] != 0) $search_keys['customerid'] = $eventData['filter_customerid'];
-    
             // Project
     
             $project_filter_sk = new WuiSessionKey(
@@ -261,16 +235,7 @@ $this->toolbars['mail'] = array(
             if ($eventData['filter_assignedto'] != 0) {
                 $search_keys['assignedto'] = $eventData['filter_assignedto'];
             }
-        } else {
-            // Customer
-    
-            $customer_filter_sk = new WuiSessionKey('customer_filter');
-            if (
-            strlen($customer_filter_sk->mValue)
-            and $customer_filter_sk->mValue != 0
-            ) $search_keys['customerid'] = $customer_filter_sk->mValue;
-            $eventData['filter_customerid'] = $customer_filter_sk->mValue;
-    
+        } else {    
             // Project
     
             $project_filter_sk = new WuiSessionKey('project_filter');
@@ -431,7 +396,7 @@ $this->toolbars['mail'] = array(
                 $bugs->mSearchOrderBy = 'id'.($sort_order == 'up' ? ' DESC' : '');
                 break;
             case '2':
-                $bugs->mSearchOrderBy = 'customerid'.($sort_order == 'up' ? ' DESC' : '');
+                $bugs->mSearchOrderBy = 'projectid'.($sort_order == 'up' ? ' DESC' : '');
                 break;
             case '3':
                 $bugs->mSearchOrderBy = 'title'.($sort_order == 'up' ? ' DESC' : '');
@@ -489,7 +454,7 @@ $this->toolbars['mail'] = array(
                         'default',
                         array('sortby' => '1')
                 )));
-        $headers[1]['label'] = $this->localeCatalog->getStr('customer.header');
+        $headers[1]['label'] = $this->localeCatalog->getStr('project.header');
         $headers[1]['link'] = \Innomatic\Wui\Dispatch\WuiEventsCall::buildEventsCallString('',
                 array(array(
                         'view',
@@ -631,25 +596,12 @@ $this->toolbars['mail'] = array(
           </args>
         </button>
     
-    <label row="1" col="0"><name>customer</name>
-      <args>
-        <label>'.$this->localeCatalog->getStr('filter_customer.label').'</label>
-      </args>
-    </label>
-    <combobox row="1" col="1"><name>filter_customerid</name>
-      <args>
-        <disp>view</disp>
-        <elements type="array">'.WuiXml::encode($customers_filter).'</elements>
-        <default>'.(isset($eventData['filter_customerid']) ? $eventData['filter_customerid'] : '').'</default>
-      </args>
-    </combobox>
-    
-    <label row="2" col="0"><name>project</name>
+    <label row="1" col="0"><name>project</name>
       <args>
         <label>'.$this->localeCatalog->getStr('filter_project.label').'</label>
       </args>
     </label>
-    <combobox row="2" col="1"><name>filter_projectid</name>
+    <combobox row="1" col="1"><name>filter_projectid</name>
       <args>
         <disp>view</disp>
         <elements type="array">'.WuiXml::encode($projects).'</elements>
@@ -657,13 +609,13 @@ $this->toolbars['mail'] = array(
       </args>
     </combobox>
     
-        <label row="3" col="0">
+        <label row="2" col="0">
           <args>
             <label>'.$this->localeCatalog->getStr('openedby.label').'</label>
           </args>
         </label>
     
-        <combobox row="3" col="1"><name>filter_openedby</name>
+        <combobox row="2" col="1"><name>filter_openedby</name>
           <args>
             <disp>view</disp>
             <elements type="array">'.WuiXml::encode($users).'</elements>
@@ -671,13 +623,13 @@ $this->toolbars['mail'] = array(
           </args>
         </combobox>
     
-        <label row="4" col="0">
+        <label row="3" col="0">
           <args>
             <label>'.$this->localeCatalog->getStr('assignedto.label').'</label>
           </args>
         </label>
     
-        <combobox row="4" col="1"><name>filter_assignedto</name>
+        <combobox row="3" col="1"><name>filter_assignedto</name>
           <args>
             <disp>view</disp>
             <elements type="array">'.WuiXml::encode($users).'</elements>
@@ -833,14 +785,6 @@ $this->toolbars['mail'] = array(
                             break;
                     }
     
-                    $tmp_customer = new InnoworkCompany(
-                            \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getDataAccess(),
-                            \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentDomain()->getDataAccess(),
-                            $bug['customerid']
-                    );
-    
-                    $tmp_customer_data = $tmp_customer->getItem();
-    
                     $tmp_project = new InnoworkProject(
                             \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getDataAccess(),
                             \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentDomain()->getDataAccess(),
@@ -884,29 +828,8 @@ $this->toolbars['mail'] = array(
         </args>
     </link>
   </children>
-</horizgroup>
-<vertgroup row="'.$row.'" col="1" halign="" valign="top">
-  <children>
-    
-<link><name>customer</name>
-  <args>
-    <link>'.WuiXml::cdata(\Innomatic\Wui\Dispatch\WuiEventsCall::buildEventsCallString(
-                $summaries['directorycompany']['domainpanel'],
-                array(
-                        array(
-                                $summaries['directorycompany']['showdispatcher'],
-                                $summaries['directorycompany']['showevent'],
-                                array('id' => $bug['customerid'])
-                        )
-                )
-        )).'</link>
-    <label>'.WuiXml::cdata('<strong>'.$tmp_customer_data['companyname'].'</strong>').'</label>
-    <compact>true</compact>
-    <nowrap>false</nowrap>
-  </args>
-</link>
-    
-<link><name>project</name>
+</horizgroup>    
+<link row="'.$row.'" col="1"><name>project</name>
   <args>
     <link>'.WuiXml::cdata(\Innomatic\Wui\Dispatch\WuiEventsCall::buildEventsCallString(
                 $summaries['project']['domainpanel'],
@@ -923,9 +846,6 @@ $this->toolbars['mail'] = array(
     <nowrap>false</nowrap>
   </args>
 </link>
-    
-  </children>
-</vertgroup>
 <label row="'.$row.'" col="2">
   <args>
     <label>'.WuiXml::cdata($bug['title']).'</label>
@@ -1034,18 +954,18 @@ $this->toolbars['mail'] = array(
     {    
         // Companies
     
-        require_once('innowork/groupware/InnoworkCompany.php');
-        $innowork_companies = new InnoworkCompany(
+        require_once('innowork/projects/InnoworkProject.php');
+        $innowork_projects = new InnoworkProject(
                 \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getDataAccess(),
                 \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentDomain()->getDataAccess()
         );
-        $search_results = $innowork_companies->Search(
+        $search_results = $innowork_projects->search(
                 '',
                 \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentUser()->getUserId()
         );
-        $customers[0] = $this->localeCatalog->getStr('nocustomer.label');
+        $projects[0] = $this->localeCatalog->getStr('noproject.label');
         while (list($id, $fields) = each($search_results)) {
-            $customers[$id] = $fields['companyname'];
+            $projects[$id] = $fields['name'];
         }
     
         $headers[0]['label'] = $this->localeCatalog->getStr('newbug.header');
@@ -1085,14 +1005,14 @@ $this->toolbars['mail'] = array(
     
                 <label row="0" col="0">
                   <args>
-                    <label>'.$this->localeCatalog->getStr('customer.label').'</label>
+                    <label>'.$this->localeCatalog->getStr('project.label').'</label>
                   </args>
                 </label>
     
-                <combobox row="0" col="1"><name>customerid</name>
+                <combobox row="0" col="1"><name>projectid</name>
                   <args>
                     <disp>action</disp>
-                    <elements type="array">'.WuiXml::encode($customers).'</elements>
+                    <elements type="array">'.WuiXml::encode($projects).'</elements>
                   </args>
                 </combobox>
     
@@ -1168,8 +1088,8 @@ $this->toolbars['mail'] = array(
             \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getDataAccess(),
             \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentDomain()->getDataAccess()
         );
-        $search_results = $innowork_projects->Search(
-            array('customerid' => $bug_data['customerid']),
+        $search_results = $innowork_projects->search(
+            '',
             \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentUser()->getUserId()
         );
     
@@ -1177,22 +1097,6 @@ $this->toolbars['mail'] = array(
     
         while (list($id, $fields) = each($search_results)) {
             $projects[$id] = $fields['name'];
-        }
-    
-        // Companies
-    
-        require_once('innowork/groupware/InnoworkCompany.php');
-        $innowork_companies = new InnoworkCompany(
-            \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getDataAccess(),
-            \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentDomain()->getDataAccess()
-        );
-        $search_results = $innowork_companies->Search(
-            '',
-            \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentUser()->getUserId()
-        );
-        $customers[0] = $this->localeCatalog->getStr('nocustomer.label');
-        while (list($id, $fields) = each($search_results)) {
-            $customers[$id] = $fields['companyname'];
         }
     
         // "Assigned to" user
@@ -1306,20 +1210,6 @@ $this->toolbars['mail'] = array(
                     <width>0%</width>
                   </args>
                   <children>
-    
-                    <label>
-                      <args>
-                        <label>'.$this->localeCatalog->getStr('customer.label').'</label>
-                      </args>
-                    </label>
-    
-                    <combobox><name>customerid</name>
-                      <args>
-                        <disp>action</disp>
-                        <elements type="array">'.WuiXml::encode($customers).'</elements>
-                        <default>'.$bug_data['customerid'].'</default>
-                      </args>
-                    </combobox>
     
                     <label>
                       <args>
